# interrogation_backend

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  main.py  pyproject.toml  railway.json  requirements.txt
app/: graph.py  llm.py  main.py  observability.py  prompt.py  state.py
app/nodes/: business_expert.py  checkpoint.py  distillation.py  hypothesis_manager.py  interrogation.py  stakeholder.py
data/: stakeholders.json
docs/: api-contract.md
scripts/: run_evaluation.py  run_graph_stream.py
